steps/7_blue_green_balancing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workshop
  namespace: workshop
  annotations:
    ingress.alb.yc.io/group-name: workshop
    ingress.alb.yc.io/external-ipv4-address: ALB_IP
    ingress.alb.yc.io/subnets: SUBNET
spec:
  rules:
  # Хосты для примера, у нас нет DNS записей на них. Поэтому обращаться нужно как:
  #   curl "http://scale-2021-k8s-workshop.yandex.cloud/clock" --connect-to "ALB_IP"
  - host: scale-2021-k8s-workshop.yandex.cloud
    http:
      paths:
      - path: /clock
        pathType: Prefix
        backend:
          resource:
            apiGroup: alb.yc.io
            kind: HttpBackendGroup
            name: clock
  - host: scale-2021-k8s-workshop.yandex.cloud
    http:
      paths:
      - path: /translate
        pathType: Prefix
        backend:
          service:
            name: translate
            port:
              number: 80
